adding form validation

--- a/index.html
+++ b/index.html
@@ -251,24 +251,23 @@
     </div>
 
      <div class="tweets">
-      <!-- <h2 class="tweets-header">TWEETS</h2> -->
        <a class="twitter-timeline" data-height="380"  href="https://twitter.com/devantonio16?ref_src=twsrc%5Etfw">Tweets by devantonio16</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
     </div>
 <hr class="hr2">
    <div class="contact-wrapper">
 
-    <h3>Contact Antonio</h3>
+      <h3>Contact Antonio</h3>
+      <div class="message-confirmation"></div>
      <form id="form" action="" method="post">
 
-       <input class="form-subject" name="subject" type="text" placeholder="Subject">
+       <input class="input form-subject" style="font-size:13px;" name="subject" type="text" placeholder="Subject">
        <div class="required-bullet1"></div>
-       <input class="form-name" name="name" type="text" placeholder="Name">
+       <input class="input form-name" style="font-size:13px;" name="name" type="text" placeholder="Name">
        <div class="required-bullet2"></div>
-       <input class="form-email" name="email" type="email" placeholder="Email">
+       <input class="input form-email" style="font-size:13px;" name="email" type="email" placeholder="Email">
        <div class="required-bullet3"></div>
-       <input class="address" type="text" name="address" placeholder="leave this blank" style="display
-      : none;">
-       <textarea class="textarea" style="font-size:13px;" name="message" placeholder="What's up?"    ></textarea>
+        <input  type="text" name="address" class="address" style="display: none;"> 
+       <textarea class="input textarea" style="font-size:13px;" name="message" placeholder="What's up?"    ></textarea>
        <input class="btn button contact-button" type="submit" name="submit" value="Send">
      </form>
      <footer>
